CORE-23460: Appointment - Fixing the print layout overflow.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/appointment-booking/component/_appointment-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/appointment-booking/component/_appointment-confirmation.scss
@@ -69,6 +69,13 @@
 
       .confirmation-item {
         padding-top: 1.875rem;
+        display: grid;
+        grid-template-columns: 12.5rem 1fr;
+
+        body.ie & {
+          display: -ms-grid;
+          -ms-grid-columns: 12.5rem 1fr;
+        }
 
         @include breakpoint($upto-tablet-landscape) {
           padding-top: 1.25rem;
@@ -78,11 +85,15 @@
           font-size: 0.875rem;
           color: $appointment-confirmation-blue-txt;
           font-family: $alshaya-bold;
-          min-width: 12.5rem;
           display: inline-block;
 
           @include breakpoint($upto-tablet-landscape) {
             display: block;
+          }
+
+          body.ie & {
+            -ms-grid-row: 1;
+            -ms-grid-column: 1;
           }
         }
 
@@ -90,6 +101,12 @@
           font-size: 0.875rem;
           color: $appointment-confirmation-txt;
           font-family: $alshaya-thin;
+
+          body.ie & {
+            -ms-grid-row: 1;
+            -ms-grid-column: 2;
+            display: inline-block;
+          }
         }
       }
 
